--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -18,12 +18,11 @@ body {
 
 .jumbotron {
 	position: relative;
-	background: none;
+     background-color: #a9a9a9;
 }
 
 .jumbotron:after {
      content:"";
-     background: url("http://lorempixel.com/1140/283");
      opacity: 0.2;
      top: 0;
      left: 0;
@@ -31,4 +30,34 @@ body {
      right: 0;
      position: absolute;
      z-index: -1;	
+}
+
+.project {
+     margin-left: 20px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+}
+
+p{
+     font-variant: small-caps;
+}
+
+.project p {
+     font-variant: small-caps;
+}
+
+#project1 {
+     font-variant: small-caps;
+}
+
+.carousel,
+.item,
+.active{
+   height: 100%;
+}
+
+.carousel-inner > .item > img{
+   height:100%;
+   margin: 0 auto;
 }
